fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,7 @@ textarea {
 }
 
 .heading {
-    letter-spacing: 0.5em;
+    letter-spacing: 0.2em;
     font-size: 14px;
     color: #666;
 }
